testData/annotation.semantic/FixPackage.hx
<error descr="Invalid package name! 'test.pack' should be ''">package test.pack;</error>